--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML/JQuery/Bootstrap Practice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Assets/bootstrap-4.1.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/Assets/bootstrap-4.1.3-dist/css/bootstrap.css">
 
 </head>
 
@@ -24,7 +24,57 @@
                 <div class="col-sm-6">
                     <img class="img-fluid" src="https://via.placeholder.com/300/09f/fff.png" alt="image">
                 </div>
-                <div class="col-sm-6"></div>
+                <div class="col-sm-6">
+                    <h2>This is an image</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem architecto, quam incidunt
+                        fugiat ad repellendus quis aut provident sequi, aliquam maxime tenetur exercitationem omnis!
+                        Ad, iusto delectus. Facilis, quod nisi.</p>
+                    <button class="btn-primary">Image Button </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 offset-3"></div>
+            <h3 class="text-center">Unordered Lists</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
+                    tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
+                    reprehenderit enim natus at ducimus.</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
+                    amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
+                    dolor, vel placeat beatae praesentium quibusdam ab?</li>
+                <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
+                    animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
+                    ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
+                    repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
+                    necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
+            </ul>
+        </div>
+        <div class="row">
+            <div class="col-sm-8 offset-2">
+                <h2>Forms in Bootstrap</h2>
+                <form>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label><input type="checkbox">Check Me</label>
+                            </div>
+                            <div class="form-group">
+                                    <label><input type="radio">Radio Me</label>
+                                </div>
+                            <button class="btn btn-info">Submit</button>
+                </form>
             </div>
         </div>
     </div>
