--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML/JQuery/Bootstrap Practice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Assets/bootstrap-4.1.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+        crossorigin="anonymous">
 
 </head>
 
@@ -34,49 +40,66 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6 offset-3"></div>
-            <h3 class="text-center">Unordered Lists</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
-                    tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
-                    reprehenderit enim natus at ducimus.</li>
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
-                    amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
-                    dolor, vel placeat beatae praesentium quibusdam ab?</li>
-                <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
-                    animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
-                    ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
-                    repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
-                    necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="col-sm-8 offset-2">
-                <h2>Forms in Bootstrap</h2>
-                <form>
-                    <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label><input type="checkbox">Check Me</label>
-                            </div>
-                            <div class="form-group">
-                                    <label><input type="radio">Radio Me</label>
-                                </div>
-                            <button class="btn btn-info">Submit</button>
-                </form>
+            <div class="col-sm-12">
+                <div class="col-sm-4">
+                    <i class="fas fa-thumbs-up"></i>
+                </div>
+                <div class="col-sm-4">
+                    <i class="fab fa-linkedin"></i>
+                </div>
+                <div class="col-sm-4">
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <div class="col-sm-4"><i class="far fa-envelope"></i>
+                </div>
             </div>
+
         </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 offset-3"></div>
+        <h3 class="text-center">Unordered Lists</h3>
+        <ul class="list-group">
+            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
+                tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
+                reprehenderit enim natus at ducimus.</li>
+            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
+                amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
+                dolor, vel placeat beatae praesentium quibusdam ab?</li>
+            <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
+                animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
+                ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
+            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
+                repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
+                necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
+        </ul>
+    </div>
+    <div class="row">
+        <div class="col-sm-8 offset-2">
+            <h2>Forms in Bootstrap</h2>
+            <form>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label><input type="checkbox">Check Me</label>
+                </div>
+                <div class="form-group">
+                    <label><input type="radio">Radio Me</label>
+                </div>
+                <button class="btn btn-info">Submit</button>
+            </form>
+        </div>
+    </div>
     </div>
 
 
