--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML/JQuery/Bootstrap Practice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Custom Style Sheet-->
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/customStyleSheet.css" />
+    
+
+    <!--Boot Strap Styling-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -13,6 +18,8 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
         crossorigin="anonymous">
+
+        
 
 </head>
 
@@ -39,40 +46,39 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row jumbotron text-center icons">
             <div class="col-sm-12">
                 <div class="col-sm-4">
-                    <i class="fas fa-thumbs-up"></i>
+                    <i class="fas fa-thumbs-up my-icon"></i>
                 </div>
                 <div class="col-sm-4">
-                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-linkedin my-icon"></i>
                 </div>
                 <div class="col-sm-4">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-instagram my-icon"></i>
                 </div>
-                <div class="col-sm-4"><i class="far fa-envelope"></i>
                 </div>
             </div>
-
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 offset-3"></div>
-        <h3 class="text-center">Unordered Lists</h3>
-        <ul class="list-group">
-            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
-                tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
-                reprehenderit enim natus at ducimus.</li>
-            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
-                amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
-                dolor, vel placeat beatae praesentium quibusdam ab?</li>
-            <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
-                animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
-                ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
-            <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
-                repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
-                necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
-        </ul>
+        <div class="col-sm-6 offset-3">
+            <h3 class="text-center">Unordered Lists</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
+                    tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
+                    reprehenderit enim natus at ducimus.</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
+                    amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
+                    dolor, vel placeat beatae praesentium quibusdam ab?</li>
+                <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
+                    animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
+                    ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
+                    repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
+                    necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
+            </ul>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm-8 offset-2">
