--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,59 +8,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Custom Style Sheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/customStyleSheet.css" />
-    
 
-    <!--Boot Strap Styling-->
+    <!--BootStrap Css file from CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-        crossorigin="anonymous">
-
-        
 
 </head>
 
 <body>
+    <!--Navigation Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <a class="navbar-brand" href="#">Roberto Benites</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#social">Social</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 text-center jumbotron">
                 <h1>Hello World</h1>
                 <hr>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni debitis praesentium placeat delectus
-                    blanditiis. Qui consequuntur nulla soluta. Ut iure, magnam optio animi soluta dolore quod
-                    temporibus eius. Enim, fuga!</p>
+                <p>Welcome to my page. Take a look around and i hope you like what you see.</p>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-12" id="about">
                 <div class="col-sm-6">
                     <img class="img-fluid" src="https://via.placeholder.com/300/09f/fff.png" alt="image">
                 </div>
                 <div class="col-sm-6">
-                    <h2>This is an image</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem architecto, quam incidunt
-                        fugiat ad repellendus quis aut provident sequi, aliquam maxime tenetur exercitationem omnis!
-                        Ad, iusto delectus. Facilis, quod nisi.</p>
+                    <h2>This is me</h2>
+                    <p>My Name is Roberto Benites. Above is a picture of me. I have worn many hates over the past 20
+                        years. I have been a cashier, copy center employee, Assistant Manager, Marketing manager,
+                        warehouse manager, QA Lead/Manager, Scrum Master, Product Owner.
+                        I have recently started to learn how to do some programming. So far i have learned and am very
+                        comfortable with HTML, CSS, Bootstrap. I am currently working on getting better with
+                        JavaScript, Jquery, Node JS, and React/React Redux.
+                    </p>
                     <button class="btn-primary">Image Button </button>
                 </div>
             </div>
         </div>
-        <div class="row jumbotron text-center icons">
-            <div class="col-sm-12">
-                <div class="col-sm-4">
-                    <i class="fas fa-thumbs-up my-icon"></i>
-                </div>
-                <div class="col-sm-4">
-                    <i class="fab fa-linkedin my-icon"></i>
-                </div>
-                <div class="col-sm-4">
-                    <i class="fab fa-instagram my-icon"></i>
-                </div>
-                </div>
+
+        <!--Social section-->
+        <div class="row jumbotron icons text-center" id="social">
+            <div class="col-sm-4">
+                <i class="fas fa-thumbs-up my-icon"></i>
+                <hr>
+                <p>Click on me if you like my page!</p>
+            </div>
+            <div class="col-sm-4">
+                <i class="fab fa-linkedin my-icon"></i>
+                <hr>
+                <p>Click here to check out my LinkedIn profile.</p>
+            </div>
+            <div class="col-sm-4">
+                <i class="fab fa-instagram my-icon"></i>
+                <hr>
+                <p>Click here if you want to see pics of me.</p>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-sm-6 offset-3">
             <h3 class="text-center">Unordered Lists</h3>
@@ -80,9 +106,10 @@
             </ul>
         </div>
     </div>
-    <div class="row">
+    <div class="row" id="contact">
         <div class="col-sm-8 offset-2">
-            <h2>Forms in Bootstrap</h2>
+            <h2 class="text-center">Contact Forms in Bootstrap</h2>
+            <hr>
             <form>
                 <div class="form-group">
                     <label>Name</label>
@@ -106,11 +133,46 @@
             </form>
         </div>
     </div>
+
+    <!--Bootstrap Table-->
+    <div class="row">
+        <div class="container">
+            <div class="col-sm-10 offset-1">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Contact</th>
+                        </tr>
+                    <tbody>
+                        <tr>
+                            <td>Roberto</td>
+                            <td>rbenites115@gmail.com</td>
+                            <td>Northridge, California</td>
+                        </tr>
+                    </tbody>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
 
 
+    <!--BootStrap JS from CDN-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
+    <!--Font Awesome CDN-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+        crossorigin="anonymous">
+
+    <!--Custom JS-->
+    <script src="../Javascript/script.js"></script>
 </body>
-<script src="../Javascript/script.js"></script>
 
 </html>
