minor changes to text

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -147,9 +147,9 @@
                         </tr>
                     <tbody>
                         <tr>
-                            <td>Roberto</td>
-                            <td>rbenites115@gmail.com</td>
-                            <td>Northridge, California</td>
+                            <td>Rob</td>
+                            <td>somename@gmail.com</td>
+                            <td>somewhere, California</td>
                         </tr>
                     </tbody>
                     </thead>
