--- a/HTML/index.html
+++ b/HTML/index.html
@@ -129,7 +129,7 @@
                 <div class="form-group">
                     <label><input type="radio">Radio Me</label>
                 </div>
-                <button class="btn btn-info">Submit</button>
+                <button type="button" class="btn btn-info">Submit</button>
             </form>
         </div>
     </div>
