--- a/HTML/index.html
+++ b/HTML/index.html
@@ -136,7 +136,8 @@
 
     <!--Bootstrap Table-->
     <div class="row">
-        <div class="container">
+        <div class="container-fluid">
+            <h2 class="text-center"> Contact Table</h2>
             <div class="col-sm-10 offset-1">
                 <table class="table table-striped">
                     <thead>
