--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-sm-12" id="about">
                 <div class="col-sm-6">
-                    <img class="img-fluid" src="https://via.placeholder.com/300/09f/fff.png" alt="image">
+                    <img class="img-fluid" src="http://placeimg.com/300/300/animals" alt="image">
                 </div>
                 <div class="col-sm-6">
                     <h2>This is me</h2>
@@ -134,6 +134,24 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptas tempora magnam placeat
+                    cumque quaerat maxime, quia quas suscipit quidem reprehenderit harum delectus porro optio, error
+                    explicabo nam enim? Recusandae.</p>
+
+                <blockquote class="blockquote text-right">
+                    <p class="mb-0">Love and be Loved, Hate and be Hated. You get what you put out.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quisquam fuga quibusdam, quam aut
+                    quidem quo aliquid porro nihil nisi nam neque fugiat earum minus vitae ullam. Amet, ab expedita!</p>
+            </div>
+        </div>
+    </div>
+
     <!--Bootstrap Table-->
     <div class="row">
         <div class="container-fluid">
@@ -155,6 +173,27 @@
                     </tbody>
                     </thead>
                 </table>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-heading">
+                        <h2>Panel/Card heading</H2>
+                    </div>
+                    <div class="card-body">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, enim. Sit odio illum nisi
+                            ullam, a eius iste, ratione non vitae praesentium voluptate alias cupiditate dolor adipisci
+                            labore. Accusamus, animi.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-info">More Info</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
