--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,9 +15,10 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+
     <!--Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
         <a class="navbar-brand" href="#">Roberto Benites</a>
 
@@ -28,8 +29,8 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#social">Social</a>
@@ -39,9 +40,9 @@
                 </li>
             </ul>
         </div>
-
     </nav>
 
+    <!--Intro-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 text-center jumbotron">
@@ -66,27 +67,78 @@
                 </div>
             </div>
         </div>
-
-        <!--Social section-->
-        <div class="row jumbotron icons text-center" id="social">
-            <div class="col-sm-4">
-                <i class="fas fa-thumbs-up my-icon"></i>
-                <hr>
-                <p>Click on me if you like my page!</p>
-            </div>
-            <div class="col-sm-4">
-                <i class="fab fa-linkedin my-icon"></i>
-                <hr>
-                <p>Click here to check out my LinkedIn profile.</p>
-            </div>
-            <div class="col-sm-4">
-                <i class="fab fa-instagram my-icon"></i>
-                <hr>
-                <p>Click here if you want to see pics of me.</p>
-            </div>
-        </div>
     </div>
 
+    <!--Carousel-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+        <!--Carousel page indicators-->
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <!--Carousel Images-->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="http://placeimg.com/500/500/animals" alt="First slide">
+                <!--Text in slide-->
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Animal pics</h5>
+                    <p>Random animal pictures for youre enjoyment.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://placeimg.com/500/500/nature" alt="Second slide">
+                <!--Text in slide-->
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Nature pics</h5>
+                    <p>Random nature pictures for youre enjoyment.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://placeimg.com/500/500/tech" alt="Third slide">
+                <!--Text in slide-->
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Technology pics</h5>
+                    <p>Random tech pictures for youre enjoyment.</p>
+                </div>
+            </div>
+        </div>
+
+        <!--Carousel Left Right Controls-->
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <!--Social section-->
+    <div class="row jumbotron icons text-center" id="social">
+        <div class="col-sm-4">
+            <i class="fas fa-thumbs-up my-icon"></i>
+            <hr>
+            <p>Click on me if you like my page!</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fab fa-linkedin my-icon"></i>
+            <hr>
+            <p>Click here to check out my LinkedIn profile.</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fab fa-instagram my-icon"></i>
+            <hr>
+            <p>Click here if you want to see pics of me.</p>
+        </div>
+    </div>
+    </div>
+
+
+    <!--List items might add projects from Git-->
     <div class="row">
         <div class="col-sm-6 offset-3">
             <h3 class="text-center">Unordered Lists</h3>
@@ -106,6 +158,8 @@
             </ul>
         </div>
     </div>
+
+    <!--Contact Forms-->
     <div class="row" id="contact">
         <div class="col-sm-8 offset-2">
             <h2 class="text-center">Contact Forms in Bootstrap</h2>
@@ -134,6 +188,7 @@
         </div>
     </div>
 
+    <!--Misc section might put more quotes-->
     <div class="container">
         <div class="row">
             <div>
@@ -177,7 +232,7 @@
         </div>
     </div>
 
-
+    <!--Panel/card section-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
@@ -191,12 +246,21 @@
                             labore. Accusamus, animi.</p>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-info">More Info</button>
+                        <button class="btn btn-info"> <i class="fa fa-thumbs-up" aria-hidden="true"></i> More Info</button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!--footer section-->
+        <div class="footer jumbotron">
+            <footer>
+                &copy;: 2018 | Roberto Benites
+            </footer>
+        </div>
+
     </div>
+
 
 
     <!--BootStrap JS from CDN-->
