--- a/HTML/index.html
+++ b/HTML/index.html
@@ -139,22 +139,14 @@
 
 
     <!--List items might add projects from Git-->
-    <div class="row">
+    <div class="row" id="services">
         <div class="col-sm-6 offset-3">
-            <h3 class="text-center">Unordered Lists</h3>
+            <h3 class="text-center" id="serviceHeader">Unordered Lists</h3>
             <ul class="list-group">
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quas
-                    tenetur possimus alias modi veniam temporibus ex saepe magni, vel libero dolorem soluta velit nulla
-                    reprehenderit enim natus at ducimus.</li>
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, esse
-                    amet fugit eum laudantium placeat officiis. Quos impedit totam quis architecto eum exercitationem
-                    dolor, vel placeat beatae praesentium quibusdam ab?</li>
-                <li class="list-group-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti facilis
-                    animi sequi necessitatibus corrupti fuga magnam natus temporibus, neque mollitia saepe? Fugit eaque
-                    ducimus officiis nobis deserunt fuga ratione reprehenderit!</li>
-                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquid
-                    repudiandae corporis cupiditate eveniet dolor officia, sunt repellendus, in odio impedit. Sit,
-                    necessitatibus itaque beatae dolor tempora eligendi quam libero!</li>
+                <li class="list-group-item">Lorem ipsum dolor sit</li>
+                <li class="list-group-item">Lorem ipsum dolor sit</li>
+                <li class="list-group-item">Lorem ipsum dolor sit</li>
+                <li class="list-group-item">Lorem ipsum dolor sit</li>
             </ul>
         </div>
     </div>
@@ -251,15 +243,44 @@
                 </div>
             </div>
         </div>
-
-        <!--footer section-->
-        <div class="footer jumbotron">
-            <footer>
-                &copy;: 2018 | Roberto Benites
-            </footer>
-        </div>
-
     </div>
+
+    <!--footer section-->
+    <div class="footer jumbotron">
+        <footer>
+            &copy;: 2018 | Roberto Benites
+        </footer>
+    </div>
+
+    <!--Modal-->
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modelId">
+      Launch
+    </button>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-sm|lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                    <h4 class="modal-title" id="modelTitleId">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    Body
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
