--- a/HTML/index.html
+++ b/HTML/index.html
@@ -298,6 +298,12 @@
 
     <!--Custom JS-->
     <script src="../Javascript/script.js"></script>
+
+    <!--Jquery CDN-->
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
